--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,30 +17,12 @@
 
   <p id="result"></p>
 
-  <!-- <script>
-    async function handleAdd() {
-      const num1 = parseFloat(document.getElementById("num1").value);
-      const num2 = parseFloat(document.getElementById("num2").value);
-
-      const response = await fetch("/add", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({ num1, num2 })
-      });
-
-      const data = await response.json();
-      document.getElementById("result").innerText = "Result: " + data.result;
-    }
-  </script> -->
-
   <script>
     async function handleAdd() {
       const num1 = parseFloat(document.getElementById("num1").value);
       const num2 = parseFloat(document.getElementById("num2").value);
   
-      const response = await fetch("https://your-backend-service.onrender.com/add", {
+      const response = await fetch("https://iris-flask-app.onrender.com/add", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ a: num1, b: num2 })
